...
        {headline && <Text style={styles.modalHeadlineText}>{headline}</Text>}
        {content && <Text style={styles.modalContentText}>{content}</Text>}
        <TouchableOpacity
          style={styles.modalButton}
          onPress={() => onPress()}
        >
          <Text style={styles.modalButtonText}>OK</Text>
        </TouchableOpacity>
      </View>
    </Modal>
  );
};

...
