...
          </Text>
          <View style={styles.lineSeparator} />
          <Text
            onPress={(e) => this.userLogout(e)}
            style={styles.item}
          >
            Log Out
          </Text>
          <View style={styles.lineSeparator} />
          <View>
            <Text style={styles.headlineText}>Customer support</Text>
            <TouchableOpacity
              onPress={() => this.onSupportClick('customer+kiosk@ohmygreen.com')}
...
